--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "quiz4devs-node",
   "version": "1.0.0",
   "description": "Quiz 4 Devs - Backend",
-  "main": "index.ts",
+  "main": "server.ts",
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf dist",
     "dev": "nodemon",
+    "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
     "start": "node dist",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "ts:node": "ts-node src/index.ts"
+    "test": "jest --forceExit --coverage --verbose",
+    "ts:node": "ts-node src/server.ts"
   },
   "keywords": [
     "node"
@@ -26,13 +27,19 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@types/eslint": "^7.2.6",
     "@types/express": "^4.17.9",
+    "@types/jest": "^26.0.20",
+    "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "eslint": "^7.16.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.0",
     "ts-node": "^9.1.1"
   }
 }
