--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,19 +2,17 @@
   "compilerOptions": {
     "module": "commonjs",
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
     "target": "es6",
     "noImplicitAny": true,
     "moduleResolution": "node",
-    "sourceMap": false,
-    "rootDir": ".",
-    "strict": true,
-    "noEmit": false,
-    "resolveJsonModule": true,
-    "noUnusedLocals": true,
-    "outDir": "./dist"
+    "sourceMap": true,
+    "outDir": "dist",
+    "baseUrl": ".",
+    "paths": {
+      "*": ["node_modules/*"]
+    }
   },
-  "include": [
-    "src/**/**.ts"
-  ],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*"]
 }
