--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
     "start": "node dist",
-    "test": "jest --forceExit --coverage --verbose",
+    "test": "NODE_ENV=test jest --forceExit --coverage --verbose --maxWorkers=1",
     "ts:node": "ts-node src/server.ts"
   },
   "keywords": [
@@ -31,6 +31,7 @@
     "@types/express": "^4.17.9",
     "@types/jest": "^26.0.20",
     "@types/supertest": "^2.0.10",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "eslint": "^7.16.0",
@@ -40,6 +41,7 @@
     "nodemon": "^2.0.6",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.0",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "uuid": "^8.3.2"
   }
 }
